--- a/src/main/resources/properties/postgresql.properties
+++ b/src/main/resources/properties/postgresql.properties
@@ -1,7 +1,7 @@
 db.driver=org.postgresql.Driver
-db.url=jdbc:postgresql://192.168.1.98:3306/bak_personal
-db.username=bak_user
-db.password=q1w2e3r4!@
+db.url=jdbc:postgresql://localhost:3306/ex
+db.username=user
+db.password=12345
 
 database.init=true
 
