--- a/src/main/resources/properties/hibernate.properties
+++ b/src/main/resources/properties/hibernate.properties
@@ -1,7 +1,7 @@
 db.driver=com.mysql.jdbc.Driver
-db.url=jdbc:mysql://localhost:3306/bak_image_gallery
-db.username=bak_user
-db.password=q1w2e3r4!@
+db.url=jdbc:mysql://localhost:3306/ex
+db.username=user
+db.password=12345
 db.maxPoolSize=20
 db.minPoolSize=3
 db.maxStatements=100
@@ -12,7 +12,7 @@ hibernate.show_sql=true
 hibernate.batch.size=20
 hibernate.format_sql=true
 hibernate.use_sql_comments=true
-entityManager.packages.toScan=ru.bakapp.entity
+entityManager.packages.toScan=entity
 
 hibernate.hbm2ddl.auto=update
 #hibernate.hbm2ddl.auto=create
